# securities_firm

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  example-env  manage.py  pyproject.toml  ruff.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_account_reviewed_at.py
accounts/templates/accounts/: account_form.html  account_status.html  admin_without_account.html  base.html  congratulations.html  login.html  register.html
accounts/tests/: conftest.py  test_forms.py  test_models.py  test_views.py
securities_firm/: asgi.py  settings.py  urls.py  wsgi.py
