[project]
name = "securities-firm"
version = "0.1.0"
description = "Add your description here"
authors = ["shzlee217 <shzlee217@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
]
